--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -15,8 +15,8 @@ header {
 }
 #quadradobranco{
     background-color: white;
-    width: 98%; 
-    height: 95%; 
+    width: 97%; 
+    height: 90%; 
     position: absolute;
     top: 50%;
     left: 50%;
@@ -25,12 +25,28 @@ header {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); 
     z-index: -1;
 }
+#cachorro{
+    position: absolute;
+    right: 40px;
+    bottom: 0;
+    margin-bottom: 10%;
+}
+#quadrado{
+    position: absolute;
+    width: 65rem;
+    height: 20rem;
+    left: 53rem;
+    top: 40rem;
+    background: #F3F3F3;
+    box-shadow: 40px 40px 40px rgba(0, 0, 0, 0.25);
+    border-radius: 30px;
+}
 ul li a {
     text-decoration: none;
     color: #000000;
 }
 #Menu-Off {
-    background-color: rgb(34, 37, 49);
+    background-color: rgb(177, 131, 75);
     height: 100vh;
     width: 100%;
     max-width: 450px;
@@ -52,7 +68,7 @@ ul li a {
 nav{
     padding: 1rem;
     display: flex;
-    background-color: rgb(34, 37, 49);
+    background-color: rgb(177, 131, 75)
 }
 #Menu{
     height: 50px;
@@ -121,6 +137,7 @@ button {
     display: inline-block;
     font-size: 40px;
     margin: 4px 2px;
+    margin-top: 40px;
     cursor: pointer;
     border-radius: 40px;
     box-shadow: 15px 10px 40px rgba(0, 0, 0, 0.25);
@@ -136,7 +153,8 @@ button {
     text-align: center;
 }
 footer {
-    margin-top: 10%;
+    margin-top: 5%;
     margin-right: auto;
     margin-left: 50px;
 }
+
