--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -10,7 +10,7 @@ body {
 header {
     padding: 20px;
     margin: 30px;
-    margin-bottom: 0px;
+    margin-bottom: -30px;
     text-align:left;
     font-size: 55px;
 }
@@ -29,14 +29,14 @@ header {
 #cachorro{
     position: absolute;
     right: 40px;
-    bottom: 0;
+    top: 15%;
     margin-bottom: 10%;
 }
 #quadrado{
     position: absolute;
     width: 65rem;
     height: 20rem;
-    left: 53rem;
+    left: 35%;
     top: 40rem;
     background: #F3F3F3;
     border-radius: 30px;
@@ -134,7 +134,6 @@ ul li a {
 nav{
     padding: 1rem;
     display: flex;
-    background-color: rgb(177, 131, 75)
 }
 #Menu{
     height: 50px;
@@ -225,10 +224,10 @@ button {
     width: 55px;
     height: 55px;
     left: 5.3rem;
-    top: 37.7rem;
+    top: 73.5%;
 }
 footer {
-    margin-top: 10%;
+    margin-top: 7%;
     margin-right: auto;
     margin-left: 50px;
 }
