--- a/assets/css/estilo1.css
+++ b/assets/css/estilo1.css
@@ -16,8 +16,21 @@ header {
 }
 #quadradobranco{
     background-color: white;
-    width: 97%; 
-    height: 90vh;
+    width: 190vh; 
+    height: 92vh;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 15px; 
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); 
+    z-index: -1;
+}
+#quadradobranco1{
+    background-color: white;
+    width: 190vh; 
+    height: 600vh;
+    margin-top: 255vh;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -32,7 +45,7 @@ p {
     white-space: normal;
     margin-left: 80px; 
     margin-top: -20px;
-    max-width: 95rem;
+    max-width: 70%;
     font-size: 20px; 
 }
 #cachorro{
@@ -106,4 +119,46 @@ nav{
 #Menu.active span:nth-child(3) {
     top:50%;
     transform: translate(-50%, 50%) rotate(120deg);
+}
+#agendar{
+    background-color: #1BDD22;
+    color: #FFFF;
+    padding: 50px 95px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 35px;
+    cursor: pointer;
+    border-radius: 40px;
+    box-shadow: 20px 20px 10px rgba(0, 0, 0, 0);
+    margin-left: 70px;
+    margin-top: 2%;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+#atendimento{
+    background-color: rgb(177, 131, 75);
+    color: #FFFF;
+    height: 81vh;
+    width: 80vh;
+    display: inline-block;
+    border-radius: 45px;
+    box-shadow: 20px 20px 10px rgba(0, 0, 0, 0);
+    margin-top: 3%;
+    margin-left: 4%;
+    margin-right: 60%;
+}
+#texto{
+    margin-top: 7vh;
+    padding-left: -5vh;
+    font-size: 39px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-align: left;
+
+}
+#mapa{
+    width: 92vh;
+    height: 83vh;
+    margin-top: -100vh;
+    margin-left: 90vh;
+    margin-right: 60%;
 }
