--- a/assets/css/estilo1.css
+++ b/assets/css/estilo1.css
@@ -2,6 +2,8 @@
     margin:0;
     padding: 0;
     box-sizing: border-box;
+    margin-bottom: 38px;
+    margin-top: 5px;
 } 
 body {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -29,8 +31,8 @@ header {
 #quadradobranco1{
     background-color: white;
     width: 190vh; 
-    height: 600vh;
-    margin-top: 255vh;
+    height: 250vh;
+    margin-top: 80vh;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -44,15 +46,15 @@ p {
     word-wrap: break-word;
     white-space: normal;
     margin-left: 80px; 
-    margin-top: -20px;
-    max-width: 70%;
+    margin-top: -90px;
+    max-width: 120vh;
     font-size: 20px; 
 }
 #cachorro{
     position: absolute;
-    right: 9.5px;
+    right: -5px;
     bottom: 0;
-    margin-bottom: 1.3%;
+    margin-bottom: -30.5px;
 }
 ul li a {
     text-decoration: none;
@@ -102,6 +104,7 @@ nav{
     left: 50%;
     transform: translate(-50%, -50%);
     transition: .3s ease;
+    margin-top: -15px;
 }
 #Menu span:nth-child(1) {
     top: 25%;
@@ -143,22 +146,56 @@ nav{
     display: inline-block;
     border-radius: 45px;
     box-shadow: 20px 20px 10px rgba(0, 0, 0, 0);
-    margin-top: 3%;
-    margin-left: 4%;
-    margin-right: 60%;
+    margin-top: 3vh;
+    margin-right: 60vh;
+    margin-left: 8.5vh;
 }
 #texto{
-    margin-top: 7vh;
-    padding-left: -5vh;
-    font-size: 39px;
+    font-size: 34px;
+    max-width: 50vh;
+    color: #FFFF;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    text-align: left;
-
+    margin-top: -86vh;
+    padding: 30px;
+    position: absolute;
 }
 #mapa{
     width: 92vh;
     height: 83vh;
     margin-top: -100vh;
-    margin-left: 90vh;
-    margin-right: 60%;
+    margin-left: 95vh;
+}
+#Avaliacao1{
+    background-color: #D9D9D9;
+    height: 60vh;
+    width: 67vh;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-align: start;
+    margin-top: 2%;
+    margin-left: 4%;
+    font-size: 35px;
+    border-radius: 45px;
+}
+#Nome1{
+    position: absolute;
+    margin-top: -29%;
+    margin-left: 75px;
+    font-size: 34px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+#Star1{
+    position: absolute;
+    margin-top: -27%;
+    margin-left: 75px;
+    font-size: 50px;
+}
+#Ava1{
+    position: absolute;
+    max-width: 65vh;
+    margin-top: -18%;
+    margin-left: 75px;
+    font-size: 35px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-align: left;
+    justify-content: left;
 }
