--- a/assets/css/estilo1.css
+++ b/assets/css/estilo1.css
@@ -41,6 +41,19 @@ header {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); 
     z-index: -1;
 }
+#quadradobranco2{
+    background-color: white;
+    width: 190vh; 
+    height: 210vh;
+    margin-top: 60vh;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 15px; 
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); 
+    z-index: -1;
+}
 p {
     width: 100%; 
     word-wrap: break-word;
@@ -177,12 +190,12 @@ nav{
     margin-left: 8vh;
 }
 #Avaliacao2{
-    background-color: #1BDD22;
+    background-color: rgb(177, 131, 75);
     margin-left: 74vh;
     margin-top: -57.8vh;
 }
 #Avaliacao3{
-    background-color: aqua;
+    background-color: #D9D9D9;
     margin-left: 137vh;
     margin-top: -57.8vh;
 }
@@ -216,3 +229,59 @@ nav{
     max-width: 40vh;
     font-size: 34px;
 }
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: -20px;
+    margin-top: -20vh;
+}
+  
+.card {
+    width: 40vh;
+    height: 80vh;
+    margin: 50px 50px 50px 50px;
+    border: 1px solid rgb(177, 131, 75);
+    border-radius: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    overflow: hidden;
+    display: block;
+    max-width: 70vh;
+    background-color: rgb(177, 131, 75);
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: transform;
+    transition-property: transform;
+}
+.card img {
+    max-width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: space-around;
+    background-color: rgb(177, 131, 75);
+}
+.card .info {
+    padding: 15px;
+    text-align: center;
+    align-items: center;
+    color: #FFFF;
+}
+.card .info h3{
+    margin-bottom: 10px;
+    font-size: 30px;
+}
+.card .info p{
+    text-align: center;
+    justify-content: center;
+    margin-top: 20px;
+    font-size: 50px;
+    margin-left: 0;
+}
+.card:hover, 
+.card:focus, 
+.card:active{
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+}
+  
+  
