--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -32,6 +32,10 @@ header {
     top: 15%;
     margin-bottom: 10%;
 }
+#mobile{
+    margin-top: -29vh;
+    opacity: 0;
+}
 #quadrado{
     position: absolute;
     width: 65rem;
@@ -231,7 +235,7 @@ footer {
     margin-right: auto;
     margin-left: 50px;
 }
-/*responsivdade mobile*/
+/*responsividade mobile*/
 
 @media (max-width:500px){
     *{
@@ -243,35 +247,30 @@ footer {
         background-color: white;
     }
     header{
-        font-size: 30px;
+        font-size: 40px;
         margin-left: 5vh;
+        margin-top: -2vh;
     }
     p {
         margin-left: 1vh;
     }
     span{
-        margin-left: 7vh;
+        margin-top: 2vh;
+        margin-left: 7.5vh;
     }
     #Amigo{
-        margin-left: 2vh;
+        margin-left: 1vh;
     }
     #quadradobranco{
-        background-color: white;
-        width: 9vh; 
-        height: 9vh;
-        position: absolute;
-        transform: translate(-50%, -50%);
-        border-radius: 15px; 
-        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); 
-        z-index: -1;
+        opacity: 0;
     } 
     #cachorro{
-        position: absolute;
-        max-width: 1vh;
-        max-width: 1vh;
-        right: 40px;
-        top: 15%;
-        margin-bottom: 10%;
+        opacity: 0;
+    }
+    #mobile{
+        opacity: 100;
+        margin-top: 72vh;
+        position: absolute
     }
     #quadrado{
         opacity: 0;
@@ -281,8 +280,18 @@ footer {
     #quadradoC{
         opacity: 0;
     }
-    #footer{
-
+    button{
+        margin-top: 3vh;
     }
-} 
-
+    #zapicon{
+        margin-left: -5vh;
+        margin-top: -8vh;
+        z-index: 1;
+    }
+    footer{
+        margin-top: 28vh;
+        padding: 2vh;
+    }
+    #Menu-Off{
+        z-index: 2;
+}   }  
