--- a/assets/css/estilo1.css
+++ b/assets/css/estilo1.css
@@ -1,287 +1,418 @@
-*{
-    margin:0;
+/* Configurações gerais para todos os elementos */
+* {
+    /* Zera margens, preenchimentos e define o box-sizing para que as bordas sejam incluídas no cálculo das dimensões */
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
-    margin-bottom: 8vh;
-    margin-top: 5px;
-} 
+
+    /* Ajusta margens para criar espaços entre elementos */
+    margin-bottom: 8vh; /* Margem inferior */
+    margin-top: 5px; /* Margem superior */
+}
+
+/* Configurações para o corpo da página */
 body {
-    background-color: rgb(177, 131, 75);
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    /* Define a cor de fundo e a família de fontes para o corpo da página */
+    background-color: rgb(177, 131, 75); /* Cor marrom clara */
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; /* Fonte padrão */
 }
+
+/* Estilo do cabeçalho */
 header {
-    padding: 20px;
-    margin: 30px;
-    margin-bottom: 0px;
-    text-align:left;
-    font-size: 55px;
+    /* Configurações de espaçamento, alinhamento e tamanho da fonte para o cabeçalho */
+    padding: 20px; /* Preenchimento interno */
+    margin: 30px; /* Espaçamento externo */
+    margin-bottom: 0px; /* Remoção da margem inferior */
+    text-align: left; /* Alinhamento à esquerda */
+    font-size: 55px; /* Tamanho grande da fonte */
 }
-#quadradobranco{
-    background-color: white;
+
+/* Estilo para um grande bloco branco no centro da página */
+#quadradobranco {
+    background-color: white; /* Cor branca */
+    width: 190vh; /* Largura grande */
+    height: 92vh; /* Altura grande */
+    position: absolute; /* Posicionamento absoluto */
+    top: 50%; /* Alinha ao centro verticalmente */
+    left: 50%; /* Alinha ao centro horizontalmente */
+    transform: translate(-50%, -50%); /* Centraliza o bloco */
+    border-radius: 15px; /* Bordas arredondadas */
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); /* Sombra suave */
+    z-index: -1; /* Camada de fundo */
+}
+
+/* Estilo para um segundo bloco branco, posicionado mais abaixo */
+#quadradobranco1 {
+    background-color: white; /* Cor branca */
     width: 190vh; 
-    height: 92vh;
+    height: 250vh; /* Altura maior */
+    margin-top: 80vh; /* Deslocamento para baixo */
     position: absolute;
     top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    left: 50%; 
+    transform: translate(-50%, -50%); 
     border-radius: 15px; 
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); 
-    z-index: -1;
+    z-index: -1; /* Camada de fundo */
 }
-#quadradobranco1{
-    background-color: white;
-    width: 190vh; 
-    height: 250vh;
-    margin-top: 80vh;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border-radius: 15px; 
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); 
-    z-index: -1;
-}
-#quadradobranco2{
+
+/* Estilo para um terceiro bloco branco, com altura intermediária */
+#quadradobranco2 {
     background-color: white;
     width: 190vh; 
     height: 210vh;
-    margin-top: 60vh;
+    margin-top: 60vh; 
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    top: 50%; 
+    left: 50%; 
+    transform: translate(-50%, -50%); 
     border-radius: 15px; 
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); 
     z-index: -1;
 }
+
+/* Estilo para parágrafos */
 p {
     width: 100%; 
-    word-wrap: break-word;
-    white-space: normal;
-    margin-left: 80px; 
-    margin-top: -90px;
-    max-width: 120vh;
-    font-size: 20px; 
+    word-wrap: break-word; /* Permite quebra de palavras */
+    white-space: normal; /* Espaçamento normal */
+    margin-left: 80px; /* Margem à esquerda */
+    margin-top: -20vh; /* Deslocamento para cima */
+    max-width: 120vh; /* Largura máxima */
+    font-size: 20px; /* Tamanho do texto */
 }
-#cachorro{
-    position: absolute;
-    right: -5px;
-    bottom: 0;
-    margin-bottom: -8vh;
+
+/* Estilo para um elemento posicionado no canto inferior direito */
+#cachorro {
+    position: absolute; 
+    right: -5px; /* Posicionamento à direita */
+    bottom: 0; 
+    margin-bottom: -8vh; /* Deslocamento para baixo */
 }
+
+/* Estilo para links dentro de listas */
 ul li a {
-    text-decoration: none;
-    color: #000000;
+    text-decoration: none; /* Sem sublinhado */
+    color: #000000; /* Cor preta */
 }
+
+/* Estilo para um menu lateral que fica oculto por padrão */
 #Menu-Off {
-    background-color: rgb(177, 131, 75);
-    height: 100vh;
-    width: 100%;
-    max-width: 450px;
-    position: fixed;
-    top: 0;
-    right: -450px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    font-size: 3rem;
-    transition: .3s ease;
-    text-decoration: none;
+    background-color: rgb(177, 131, 75); 
+    height: 100vh; /* Altura total */
+    width: 100%; /* Largura total */
+    max-width: 450px; 
+    position: fixed; /* Posição fixa */
+    top: 0; 
+    right: -450px; /* Mantém fora da tela */
+    display: flex; /* Configuração de layout flexível */
+    flex-direction: column; /* Itens em coluna */
+    justify-content: center; /* Centraliza verticalmente */
+    align-items: center; /* Centraliza horizontalmente */
+    text-align: center; 
+    font-size: 3rem; /* Tamanho grande da fonte */
+    transition: .3s ease; /* Transição suave */
+    text-decoration: none; 
 }
-#Menu-Off.active{
-    right:0;
+
+/* Estilo para quando o menu lateral está ativo (desliza para a tela) */
+#Menu-Off.active {
+    right: 0; /* Desliza para a tela */
 }
-nav{
-    padding: 1rem;
-    display: flex;
+
+/* Estilo para a barra de navegação */
+nav {
+    padding: 1rem; /* Preenchimento interno */
+    display: flex; /* Configuração flexível */
 }
-#Menu{
-    height: 50px;
-    width: 50px;
-    margin-left: auto;
-    margin-right: 8px;
-    position: relative;
-    cursor: pointer;
-    margin-top: -120px;
-    margin-right: 30px;
+
+/* Estilo para o botão do menu */
+#Menu {
+    height: 50px; 
+    width: 50px; 
+    margin-left: auto; /* Alinha à direita */
+    margin-right: 8px; 
+    position: relative; 
+    cursor: pointer; /* Indica que é clicável */
+    margin-top: -120px; /* Deslocamento para cima */
+    margin-right: 30px; 
 }
-#Menu span{
-    height: 5px;
-    width: 100%;
-    background-color: #000000;
-    border-radius: 25px;
+
+/* Estilo para as barras do botão do menu */
+#Menu span {
+    height: 5px; 
+    width: 100%; 
+    background-color: #000000; 
+    border-radius: 25px; 
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    transition: .3s ease;
+    top: 50%; /* Centraliza verticalmente */
+    left: 50%; /* Centraliza horizontalmente */
+    transform: translate(-50%, -50%); /* Garante centralização */
+    transition: .3s ease; /* Transição suave */
     margin-top: -70px;
 }
+
+/* Ajusta a posição do primeiro span */
 #Menu span:nth-child(1) {
-    top: 25%;
+    top: 25%; 
 }
+
+/* Ajusta a posição do terceiro span */
 #Menu span:nth-child(3) {
-    top: 75%;
+    top: 75%; 
 }
+
+/* Estilo para o primeiro span quando o menu está ativo */
 #Menu.active span:nth-child(1) {
-    top:55%;
-    transform: translate(-50%, -35%) rotate(-120deg);
+    top: 55%; 
+    transform: translate(-50%, -35%) rotate(-120deg); /* Rotaciona para criar efeito de X */
 }
+
+/* Estilo para o segundo span quando o menu está ativo */
 #Menu.active span:nth-child(2) {
-    opacity: 0;
+    opacity: 0; /* Torna invisível */
 }
+
+/* Estilo para o terceiro span quando o menu está ativo */
 #Menu.active span:nth-child(3) {
-    top:50%;
-    transform: translate(-50%, 50%) rotate(120deg);
+    top: 50%; 
+    transform: translate(-50%, 50%) rotate(120deg); /* Rotaciona para criar efeito de X */
 }
-#agendar{
-    background-color: #1BDD22;
-    color: #FFFF;
-    padding: 50px 95px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 35px;
-    cursor: pointer;
-    border-radius: 40px;
-    box-shadow: 20px 20px 10px rgba(0, 0, 0, 0);
-    margin-left: 70px;
-    margin-top: 2%;
+
+/* Estilo para um botão de agendamento */
+#agendar {
+    background-color: #1BDD22; 
+    color: #FFFF; 
+    padding: 50px 95px; /* Preenchimento interno */
+    text-align: center; /* Alinha ao centro */
+    text-decoration: none; 
+    display: inline-block; 
+    font-size: 35px; /* Tamanho grande da fonte */
+    cursor: pointer; 
+    border-radius: 40px; /* Bordas arredondadas */
+    box-shadow: 20px 20px 10px rgba(0, 0, 0, 0); 
+    margin-left: 70px; 
+    margin-top: 2%; 
 }
-#atendimento{
-    background-color: rgb(177, 131, 75);
-    color: #FFFF;
-    height: 81vh;
-    width: 80vh;
-    display: inline-block;
-    border-radius: 45px;
-    box-shadow: 20px 20px 10px rgba(0, 0, 0, 0);
-    margin-top: 3vh;
-    margin-right: 60vh;
-    margin-left: 8.5vh;
+
+/* Estilo para um bloco de atendimento */
+#atendimento {
+    background-color: rgb(177, 131, 75); 
+    color: #FFFF; 
+    height: 81vh; /* 81% da altura da viewport */
+    width: 80vh; 
+    display: inline-block; 
+    border-radius: 45px; /* Bordas arredondadas */
+    box-shadow: 20px 20px 10px rgba(0, 0, 0, 0); 
+    margin-top: 3vh; 
+    margin-right: 60vh; 
+    margin-left: 8.5vh; 
 }
-#texto{
-    font-size: 48px;
-    max-width: 81vh;
-    color: #FFFF;
-    margin-top: -86vh;
-    padding: 30px;
-    position: absolute;
+
+/* Estilo para um bloco de texto */
+#texto {
+    font-size: 48px; 
+    max-width: 81vh; 
+    color: #FFFF; 
+    margin-top: -86vh; 
+    padding: 30px; 
+    position: absolute; 
 }
-#mapa{
-    width: 92vh;
-    height: 83vh;
-    margin-top: -100vh;
-    margin-left: 95vh;
+
+/* Estilo para um bloco de mapa */
+#mapa {
+    width: 92vh; 
+    height: 83vh; 
+    margin-top: -100vh; 
+    margin-left: 95vh; 
 }
-#Avaliacao1, 
-#Avaliacao2, 
-#Avaliacao3{
-    z-index: 1;
-    top: 110rem;
-    width: 30rem;
-    height: 30rem;
-    border-radius: 30px;
-} 
-#Avaliacao1{
-    background: #D9D9D9;
-    margin-left: 8vh;
+
+/* Estilos para blocos de avaliação */
+#Avaliacao1, #Avaliacao2, #Avaliacao3 {
+    z-index: 1; 
+    top: 110rem; 
+    width: 30rem; 
+    height: 30rem; 
+    border-radius: 30px; 
 }
-#Avaliacao2{
-    background-color: rgb(177, 131, 75);
-    margin-left: 74vh;
-    margin-top: -57.8vh;
+
+/* Estilo para o primeiro bloco de avaliação */
+#Avaliacao1 {
+    background: #D9D9D9; /* Cor cinza claro */
+    margin-left: 8vh; 
 }
-#Avaliacao3{
-    background-color: #D9D9D9;
-    margin-left: 137vh;
-    margin-top: -57.8vh;
+
+/* Estilo para o segundo bloco de avaliação */
+#Avaliacao2 {
+    background-color: rgb(177, 131, 75); 
+    margin-left: 74vh; 
+    margin-top: -57.8vh; 
 }
-#Nome1,
-#Nome2,
-#Nome3{
-    font-size: 34px;
-    z-index: 2;
-    margin-left: 20px;
-    min-height: 70vh;
-    white-space: nowrap;
+
+/* Estilo para o terceiro bloco de avaliação */
+#Avaliacao3 {
+    background-color: #D9D9D9; 
+    margin-left: 137vh; 
+    margin-top: -57.8vh; 
 }
-#Star1,
-#Star2,
-#Star3{
-    position: relative;
-    font-size: 50px;
-    color: gold;
-    top: 20px;
-    left: -50px;
-    margin-left: 6vh;
-    margin-top: -4vh;
-    display: block;
+
+/* Estilos para nomes nos blocos de avaliação */
+#Nome1, #Nome2, #Nome3 {
+    font-size: 34px; 
+    z-index: 2; 
+    margin-left: 20px; 
+    min-height: 70vh; 
+    white-space: nowrap; 
 }
-#Ava1,
-#Ava2,
-#Ava3{
-    display: block;
-    margin-top: 20px;
-    margin-left: 20px;
-    max-width: 40vh;
-    font-size: 34px;
+
+/* Estilos para estrelas de avaliação */
+#Star1, #Star2, #Star3 {
+    position: relative; 
+    font-size: 50px; 
+    color: gold; /* Cor dourada */
+    top: 20px; 
+    left: -50px; 
+    margin-left: 6vh; 
+    margin-top: -4vh; 
+    display: block; 
 }
+
+/* Estilos para texto de avaliação */
+#Ava1, #Ava2, #Ava3 {
+    display: block; 
+    margin-top: 20px; 
+    margin-left: 20px; 
+    max-width: 40vh; 
+    font-size: 34px; 
+}
+
+/* Estilo para um container flexível */
 .container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    padding: -20px;
-    margin-top: -20vh;
+    display: flex; 
+    flex-wrap: wrap; 
+    justify-content: space-around; 
+    padding: -20px; 
+    margin-top: -20vh; 
 }
-  
+
+/* Estilos para um cartão */
 .card {
-    width: 40vh;
-    height: 80vh;
-    margin: 50px 50px 50px 50px;
-    border: 1px solid rgb(177, 131, 75);
-    border-radius: 10px;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    overflow: hidden;
-    display: block;
-    max-width: 70vh;
-    background-color: rgb(177, 131, 75);
-    -webkit-transition-duration: 0.3s;
-    transition-duration: 0.3s;
-    -webkit-transition-property: transform;
-    transition-property: transform;
+    width: 40vh; 
+    height: 80vh; 
+    margin: 50px 50px 50px 50px; 
+    border: 1px solid rgb(177, 131, 75); 
+    border-radius: 10px; 
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); 
+    overflow: hidden; 
+    display: block; 
+    max-width: 70vh; 
+    background-color: rgb(177, 131, 75); 
+    -webkit-transition-duration: 0.3s; 
+    transition-duration: 0.3s; 
+    -webkit-transition-property: transform; 
+    transition-property: transform; 
 }
+
+/* Estilo para imagens dentro dos cartões */
 .card img {
-    max-width: 100%;
-    height: auto;
-    display: flex;
-    justify-content: space-around;
-    background-color: rgb(177, 131, 75);
+    max-width: 100%; 
+    height: auto; 
+    display: flex; 
+    justify-content: space-around; 
+    background-color: rgb(177, 131, 75); 
 }
+
+/* Estilo para informações dentro dos cartões */
 .card .info {
-    padding: 15px;
-    text-align: center;
-    align-items: center;
-    color: #FFFF;
+    padding: 15px; 
+    text-align: center; 
+    align-items: center; 
+    color: #FFFF; 
 }
-.card .info h3{
-    margin-bottom: 10px;
-    font-size: 30px;
+
+/* Estilo para títulos dentro dos cartões */
+.card .info h3 {
+    margin-bottom: 10px; 
+    font-size: 30px; 
 }
-.card .info p{
-    text-align: center;
-    justify-content: center;
-    margin-top: 20px;
-    font-size: 50px;
-    margin-left: 0;
+
+/* Estilo para parágrafos dentro dos cartões */
+.card .info p {
+    text-align: center; 
+    justify-content: center; 
+    margin-top: 20px; 
+    font-size: 50px; 
+    margin-left: 0; 
 }
+
+/* Efeito ao passar o mouse sobre o cartão */
 .card:hover, 
 .card:focus, 
-.card:active{
-    -webkit-transform: scale(1.1);
-    transform: scale(1.1);
+.card:active {
+    -webkit-transform: scale(1.1); 
+    transform: scale(1.1); 
 }
-  
-  
+
+/* Estilos para dispositivos móveis */
+@media (max-width:500px) {
+    /* Configurações gerais para dispositivos móveis */
+    * {
+        margin-left: 0vh; 
+        padding: 0; 
+        box-sizing: border-box; 
+    }
+    body {
+        background-color: white; /* Cor de fundo para dispositivos móveis */
+    }
+    #quadradobranco {
+        opacity: 0; /* Invisível em dispositivos móveis */
+    }
+    header {
+        font-size: 40px; 
+        margin-left: -1.5vh; 
+        margin-top: -5vh; 
+    }
+    p {
+        margin-left: 1vh; 
+        margin-top: -22vh; 
+    }
+    #cachorro {
+        opacity: 0; 
+    }
+    #Menu-Off {
+        z-index: 2; 
+    }
+    span {
+        display: inline; 
+        margin: 8vh; 
+    }
+    #agendar {
+        padding: 20px 55px; 
+        margin-left: 1vh; 
+        margin-top: -5vh; 
+    }
+    #atendimento {
+        height: 90vh; 
+        width: 48vh; 
+        margin-left: 1vh; 
+        margin-top: -5vh; 
+    }
+    #texto {
+        font-size: 3.5vh; 
+        margin-top: -95vh; 
+        max-width: 38.3vh; 
+    }
+    #Avaliacao1, 
+    #Avaliacao2, 
+    #Avaliacao3 {
+        width: 47.5vh; 
+        height: 47.5vh; 
+        margin-left: 1vh; 
+    }
+    #Avaliacao2 {
+        margin-top: 1vh; 
+    }
+    #Avaliacao3 {
+        margin-top: 1vh; 
+    }
+}
